# Clan-Community

./: .gitignore  Caddyfile  README.md  docker-compose.local.yml  docker-compose.yml
api/: Cargo.toml  Dockerfile  README.md  Rocket.toml
api/src/: auth.rs  community.rs  cors.rs  error.rs  main.rs  posts.rs  users.rs
api/src/model/: mod.rs
api/tests/: routes_test.rs
api/tests/common/: mod.rs
frontend/: package.json
frontend/src/: App.tsx
frontend/src/data/api/: CommunityLocalStorageDataSource.tsx  UserDataSource.tsx
frontend/src/data/repository/: UserRepository.tsx
frontend/src/renderer/components/: NavBar.tsx  Navbar.tsx  TextInput.tsx  button.tsx
frontend/src/renderer/views/about_us/: Home.tsx
frontend/src/renderer/views/aboutus/: About.tsx
frontend/src/renderer/views/authorization/login/: Login.tsx  ViewModel.tsx
frontend/src/renderer/views/authorization/register/: Register.tsx  ViewModel.tsx
frontend/src/renderer/views/community/detail/: CommunityDetail.tsx  ViewModel.tsx
frontend/src/renderer/views/community/list/: CommunityList.tsx  ViewModel.tsx
frontend/src/renderer/views/community/new/: CommunityNew.tsx  ViewModel.tsx
frontend/src/renderer/views/contactus/: Contact.tsx
frontend/src/renderer/views/home/: Home.tsx
frontend/src/renderer/views/index/: Index.tsx
frontend/src/services/community/: Create.tsx  Delete.tsx  Get.tsx  Update.tsx
frontend/src/services/user/: CRUD.tsx
